// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnalysisItem /> renders base component correctly 1`] = `
<LinkContainer
  activeClassName="active"
  exact={false}
  replace={false}
  strict={false}
  to="/samples/undefined/analyses/test_analysis"
>
  <div
    className="list-group-item spaced hoverable"
    style={
      Object {
        "color": "#555",
      }
    }
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={4}
        sm={4}
        xs={4}
      >
        <strong>
          Test Algorithm
        </strong>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={4}
        sm={4}
        xs={5}
      >
        Started 
        <RelativeTime
          time="2018-02-14T17:12:00.000000Z"
        />
         by test-user
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={2}
        sm={2}
        xs={2}
      >
        <span>
          123abc
          <Label
            bsClass="label"
            bsStyle="default"
            style={
              Object {
                "marginLeft": "5px",
              }
            }
          >
            123
          </Label>
        </span>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        lgHidden={true}
        mdHidden={true}
        smHidden={true}
        xs={1}
      >
        <span
          className="pull-right"
        >
          <Loader
            color="#3c8786"
            size="14px"
            style={
              Object {
                "display": "inline",
              }
            }
          />
        </span>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={2}
        sm={2}
        xsHidden={true}
      >
        <strong
          className="pull-right"
        >
          <Loader
            color="#3c8786"
            size="14px"
            style={
              Object {
                "display": "inline",
              }
            }
          />
           In Progress
        </strong>
      </Col>
    </Row>
  </div>
</LinkContainer>
`;

exports[`<AnalysisItem /> renders correctly 1`] = `
<div
  className="list-group-item spaced"
  style={
    Object {
      "color": "#555",
    }
  }
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={4}
      xs={4}
    >
      <strong>
        Test Algorithm
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={4}
      xs={5}
    >
      Started 
      <RelativeTime
        time="2018-02-14T17:12:00.000000Z"
      />
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={2}
      xs={2}
    />
    <Col
      bsClass="col"
      componentClass="div"
      lgHidden={true}
      mdHidden={true}
      smHidden={true}
      xs={1}
    >
      <span
        className="pull-right"
      >
        <Loader
          color="#3c8786"
          size="14px"
          style={
            Object {
              "display": "inline",
            }
          }
        />
      </span>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={2}
      sm={2}
      xsHidden={true}
    >
      <strong
        className="pull-right"
      >
        <Loader
          color="#3c8786"
          size="14px"
          style={
            Object {
              "display": "inline",
            }
          }
        />
         In Progress
      </strong>
    </Col>
  </Row>
</div>
`;
